--- a/config/locales/devise.zh-CN.yml
+++ b/config/locales/devise.zh-CN.yml
@@ -3,62 +3,62 @@
 zh-CN:
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      confirmed: "你的邮箱地址已经确认成功。"
+      send_instructions: "你将在几分钟内收到一份介绍如何确认邮箱地址的指导邮件"
+      send_paranoid_instructions: "假如你的邮箱地址存在我们的数据库中, 你将在几分钟内收到一份介绍如何确认邮箱地址的指导邮件。"
     failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
-      locked: "Your account is locked."
-      last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      already_authenticated: "你已经登录。"
+      inactive: "你的账号还未激活。"
+      invalid: "无效的%{authentication_keys}或密码。"
+      locked: "你的账号被锁定。"
+      last_attempt: "你还有最后一次尝试机会，再次失败你的帐号将被锁定。"
+      not_found_in_database: "无效的%{authentication_keys}或密码。"
+      timeout: "你的会话已过期，请重新登录以继续。"
+      unauthenticated: "在继续之前你需要先登录或者注册。"
+      unconfirmed: "在继续之前你需要确认你的邮箱地址。"
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "确认指导"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "重置密码指导"
       unlock_instructions:
-        subject: "Unlock instructions"
+        subject: "解冻指导"
       email_changed:
-        subject: "Email Changed"
+        subject: "电子邮箱已更改"
       password_change:
-        subject: "Password Changed"
+        subject: "密码已更改"
     omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
+      failure: "无法从 %{kind} 授权你，由于 \"%{reason}\"。"
+      success: "从 %{kind} 账号成功授权。"
     passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password has been changed successfully. You are now signed in."
-      updated_not_active: "Your password has been changed successfully."
+      no_token: "你无法从重置密码的邮件之外访问该页面，如果你确定是来自于重置密码的邮件，请确保你的 URL 地址是完整的。"
+      send_instructions: "你将在几分钟内收到一个介绍如何重置密码的指导邮件。"
+      send_paranoid_instructions: "假如你的电子邮箱存在我们的数据库中，你将在几分钟内收到一封找回密码的邮件。"
+      updated: "你的密码已更新。现在你已经登录了。"
+      updated_not_active: "你的密码已更新。"
     registrations:
-      destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
-      updated: "Your account has been updated successfully."
+      destroyed: "再会! 你的账户已成功取消。 我们希望不久能再见到你。"
+      signed_up: "欢迎! 你已经注册成功。"
+      signed_up_but_inactive: "你已经注册成功。请先激活之后再登录。"
+      signed_up_but_locked: "你已经注册成功。然而由于你的账户被锁定无法登录。"
+      signed_up_but_unconfirmed: "一封确认邮件已经发送至你的邮箱地址，请前往激活你的账号。"
+      update_needs_confirmation: "账号更新成功, 不过我们需要验证你的新邮箱地址。请检查你的邮件并且确认你的新邮箱地址。"
+      updated: "你的账号更新成功。"
     sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
-      already_signed_out: "Signed out successfully."
+      signed_in: "登录成功。"
+      signed_out: "注销成功。"
+      already_signed_out: "已经注销。"
     unlocks:
-      send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
-      send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
-      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+      send_instructions: "你将在几分钟内收到一封邮件介绍如何解锁你的账号。"
+      send_paranoid_instructions: "假如你的账号存在， 你将在几分种内收到一封邮件介绍如何解锁你的账号。"
+      unlocked: "你的账号已锁定，请登录以继续。"
   errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
-      expired: "has expired, please request a new one"
-      not_found: "not found"
-      not_locked: "was not locked"
+      already_confirmed: "已经确认，请尝试登录。"
+      confirmation_period_expired: "需要在 %{period} 之内被确认，请重新请求。"
+      expired: "已经过期，请重新请求。"
+      not_found: "没有找到"
+      not_locked: "未锁定"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        one: "发生错误，导致%{resource}保存失败："
+        other: "有 %{count} 个错误，导致%{resource}保存失败："
