--- a/config/locales/thredded.zh-CN.yml
+++ b/config/locales/thredded.zh-CN.yml
@@ -2,235 +2,228 @@
 zh-CN:
   thredded:
     content_moderation_states:
-      content_blocked_notice: Blocked
-      content_blocked_notice_with_record_html: Blocked by %{moderator} %{time_ago}
+      content_blocked_notice: "被锁定"
+      content_blocked_notice_with_record_html: "被锁定由 %{moderator} %{time_ago}"
     email_notifier:
-      by_email: by email
+      by_email: "电子邮箱"
     emails:
       message_notification:
         html:
-          email_sent_reason_html: >-
-            This email was sent to you because %{user} included you in a private topic, “<a href="%{post_url}">%{topic_title}</a>”.
-          post_lead_html: 'A new message from %{user} in <a href="%{post_url}">“%{topic_title}”</a>:'
+          email_sent_reason_html: "我们给你发送这封邮件是因为 %{user} 在一个私人帖子中提到你，“<a href=\"%{post_url}\">%{topic_title}</a>”。"
+          post_lead_html: "一个来自于 %{user} 的新消息在<a href=\"%{post_url}\">“%{topic_title}”</a>中："
           unsubscribe_instructions_html: :thredded.emails.post_notification.html.unsubscribe_instructions_html
-        subject: A new message from %{user} in “%{topic_title}”
+        subject: "一个来自于 %{user} 的新消息在 “%{topic_title}” 中"
         text:
           email_sent_reason: |-
-            This email was sent to you because %{user} included you in
-            the private topic “%{topic_title}”.
+            我们给你发送这封邮件是因为 %{user} 在一个私人帖子中提到你，“%{topic_title}”。
 
-            Go here to view the conversation:
+            请到以下浏览对话：
             %{post_url}
-          post_lead: 'A new message from %{user} in “%{topic_title}”:'
+          post_lead: "一个来自于 %{user} 的新消息在“%{topic_title}”中："
           unsubscribe_instructions: :thredded.emails.post_notification.text.unsubscribe_instructions
       post_notification:
         html:
-          email_sent_reason_html: 'This email was sent to you because you are following this topic: “<a href="%{post_url}">%{topic_title}</a>”.'
-          post_lead_html: '%{user} <a href="%{post_url}">said in “%{topic_title}”</a>:'
-          unsubscribe_instructions_html: To unsubscribe from these emails, update your <a href="%{preferences_url}">preferences</a>.
-        subject: A new post in “%{topic_title}” by %{user}
+          email_sent_reason_html: "我们给你发送这封邮件是因为你关注了帖子： “<a href=\"%{post_url}\">%{topic_title}</a>”。"
+          post_lead_html: "%{user} 在<a href=\"%{post_url}\">“%{topic_title}”</a>中说到："
+          unsubscribe_instructions_html: "退订这些邮件, 前往<a href=\"%{preferences_url}\">设置</a>。"
+        subject: "新回复在“%{topic_title}”由 %{user}"
         text:
           email_sent_reason: |-
-            This email was sent to you because you are following
-            the topic “%{topic_title}”.
+            我们给你发送这封邮件是因为你关注了这个帖子“%{topic_title}“。
 
-            Go here to view the conversation:
+            请到以下浏览对话：
             %{post_url}
-          post_lead: "%{user} said in “%{topic_title}”:"
+          post_lead: "%{user} 在“%{topic_title}”中说到："
           unsubscribe_instructions: |-
-            To unsubscribe from these emails, update your preferences here:
+            退订这些邮件，请到这里更新设置：
             %{unsubscribe_url}
     errors:
-      login_required: Please sign in first.
-      not_authorized: You are not authorized to access this page.
-      private_topic_create_denied: You are not authorized to create private topics.
-      private_topic_not_found: This private topic does not exist.
+      login_required: "请先登录。"
+      not_authorized: "你没有权限访问该页面。"
+      private_topic_create_denied: "你没有权限创建私人帖子。"
+      private_topic_not_found: "该私人帖子不存在。"
     form:
-      create_btn_submitting: Creating...
-      preview: Preview
-      update: Update
-      update_btn_submitting: Updating...
+      create_btn_submitting: "创建中..."
+      preview: "预览"
+      update: "更新"
+      update_btn_submitting: "更新中..."
     messageboard:
-      create: Create a New Messageboard
+      create: "创建一个新板块"
       form:
         create_btn_submitting: :thredded.form.create_btn_submitting
-        description_label: Description
-        messageboard_group_id_label: Messageboard group
-        no_group: No Group
-        title_label: Name
+        description_label: "描述"
+        messageboard_group_id_label: "板块分组"
+        no_group: "没有分组"
+        title_label: "名称"
         update_btn_submitting: :thredded.form.update_btn_submitting
       index:
-        page_title: Messageboards
-      last_updated_by_html: Updated %{time_ago} <cite>by %{user}</cite>
-      topics_and_posts_counts: "%{topics_count} topics / %{posts_count} posts"
+        page_title: "板块"
+      last_updated_by_html: "%{time_ago} <cite>由 %{user}</cite> 更新"
+      topics_and_posts_counts: "%{topics_count} 帖子 / %{posts_count} 回复"
       update: :thredded.form.update
-      updated_notice: Messageboard has been updated
+      updated_notice: "板块已更新"
     messageboard_group:
-      create: Create a New Messageboard Group
+      create: "创建一个新的板块分组"
       form:
         create_btn_submitting: :thredded.form.create_btn_submitting
-      saved: Messageboard Group %{name} created
+      saved: "板块分组 %{name} 已创建"
     moderation:
-      approve_btn: Approve
-      block_btn: Block
+      approve_btn: "通过"
+      block_btn: "锁定"
       pending:
         empty:
-          content: All posts have been moderated.
-          title: Good job!
-      post_approved_html: Post approved by %{moderator} %{time_ago}.
-      post_blocked_html: Post blocked by %{moderator} %{time_ago}.
-      post_deleted_notice: This post has been deleted.
-      posts_content_changed_since_moderation_html: >-
-        The <a href="%{post_url}">post's</a> content change since it was moderated. Below is the content at the
-        time it was moderated.
+          content: "所有回复已审核。"
+          title: "干的漂亮！"
+      post_approved_html: "回复被 %{moderator} 通过 %{time_ago}。"
+      post_blocked_html: "回复被 %{moderator} 锁定 %{time_ago}。"
+      post_deleted_notice: "该回复已被删除。"
+      posts_content_changed_since_moderation_html: "<a href=\"%{post_url}\">该回复</a>的内容由于被阻止而更改，以下是当时被阻止的内容。"
       search_users:
-        form_label: Search users
+        form_label: "搜索用户"
         form_placeholder: :thredded.moderation.search_users.form_label
-        no_results_message: No users with name starting with %{query}
-        results_message: Users with names starting with %{query}
+        no_results_message: "未找到有关 %{query} 的用户。"
+        results_message: "有关 %{query} 的所有用户。"
     nav:
-      all_messageboards: All Messageboards
-      edit_messageboard: Edit Messageboard
-      edit_post: Edit Post
+      all_messageboards: "所有板块"
+      edit_messageboard: "编辑板块"
+      edit_post: "编辑回复"
       edit_private_topic: :thredded.nav.edit_topic
-      edit_topic: Edit
-      mark_all_read: Mark All As Read
-      moderation: Moderation
-      moderation_activity: Activity
-      moderation_history: History
-      moderation_pending: Pending
-      moderation_users: Users
-      private_topics: Private Messages
-      settings: Notification Settings
-    null_user_name: Deleted user
+      edit_topic: "编辑"
+      mark_all_read: "标记所有为已读"
+      moderation: "审核"
+      moderation_activity: "状况"
+      moderation_history: "历史"
+      moderation_pending: "待定"
+      moderation_users: "用户"
+      private_topics: "私有信息"
+      settings: "通知设置"
+    null_user_name: "删除用户"
     posts:
-      delete: Delete Post
-      delete_confirm: Are you sure you want to delete this post?
-      deleted_notice: Your post has been deleted.
+      delete: "删除回复"
+      delete_confirm: "你确定删除该回复吗？"
+      deleted_notice: "你的回复已删除。"
       edit: :thredded.nav.edit_post
       form:
-        content_label: Content
-        create_btn: Submit Reply
-        create_btn_submitting: Posting...
-        title_label: Add a post
-        update_btn: Update Post
+        content_label: "内容"
+        create_btn: "提交回复"
+        create_btn_submitting: "回复中..."
+        title_label: "回复"
+        update_btn: "更新回复"
         update_btn_submitting: :thredded.form.update_btn_submitting
-      pending_moderation_notice: Your post will be published when it has been reviewed by a moderator.
-      quote_btn: Quote
+      pending_moderation_notice: "你的回复将会在审核之后公开发布。"
+      quote_btn: "引用"
     preferences:
       edit:
         page_title: :thredded.nav.settings
       form:
         auto_follow_topics:
-          hint: Automatically follow all new topics. Changing this setting will change it for all messageboards.
-          label: Follow all new topics
+          hint: "自动关注所有新帖子。更改该设置将会更改所有板块的设置。"
+          label: "关注所有新帖子"
         follow_topics_on_mention:
-          hint: 'When someone mentions you by your username (eg: @sam) you will follow the topic.'
-          label: Follow topics you are mentioned in
+          hint: "当有人在帖子中提及你（如：@you）时你将自动关注该帖子。"
+          label: "关注那些你被提及的帖子"
         messageboard_auto_follow_topics:
-          hint: Automatically follow all new topics in this messageboard. This overrides the respective setting
-            above.
-          label: Follow all new topics
+          hint: "自动关注该板块的所有新帖子。 这将覆盖以上所有的设置。"
+          label: "关注所有新帖子"
         messageboard_follow_topics_on_mention:
-          hint: 'When someone mentions you by your username (eg: @sam) in this messageboard you will follow the
-            topic.'
+          hint: "当有人在该板块中提及你（如：@sam）时你将自动关注该帖子。"
           label: :thredded.preferences.form.follow_topics_on_mention.label
         messageboard_notifications_for_followed_topics:
           label: :thredded.preferences.form.notifications_for_followed_topics.label
         notifications_for_followed_topics:
-          label: Notifications for followed topics
+          label: "关注帖子的通知"
         notifications_for_private_topics:
-          label: Notifications for private messages
-        submit_btn: Update Settings
+          label: "私人帖子的通知"
+        submit_btn: "更新设置"
         update_btn_submitting: :thredded.form.update_btn_submitting
-      global_preferences_title: Global Settings
-      messageboard_preferences_nav_title: Messageboard Settings
-      messageboard_preferences_title_html: Settings for <em>%{messageboard}</em>
-      updated_notice: Your settings have been updated.
+      global_preferences_title: "全局设置"
+      messageboard_preferences_nav_title: "板块设置"
+      messageboard_preferences_title_html: "<em>%{messageboard}</em> 的相关设置"
+      updated_notice: "你的设置已经更新。"
     private_posts:
       form:
-        content_label: Message
-        create_btn: Send Message
-        create_btn_submitting: Sending...
+        content_label: "消息"
+        create_btn: "发送消息"
+        create_btn_submitting: "发送中..."
         update_btn_submitting: :thredded.form.update_btn_submitting
     private_topics:
-      edit: Edit
+      edit: "编辑"
       errors:
-        user_ids_length: Please specify at least one other user.
+        user_ids_length: "请指定至少一个用户。"
       form:
         content_label: :thredded.private_posts.form.content_label
         create_btn: :thredded.private_posts.form.create_btn
         create_btn_submitting: :thredded.private_posts.form.create_btn_submitting
         title_label: :thredded.topics.form.title_label
-        title_placeholder_new: Write the subject of this conversation
-        title_placeholder_start: Start a new conversation
-        update_btn: Update
+        title_placeholder_new: "写一个该帖子的标题"
+        title_placeholder_start: "发布新的帖子"
+        update_btn: "更新"
         update_btn_submitting: :thredded.private_posts.form.update_btn_submitting
-        users_label: Participants
-        users_placeholder: Select users to participate in this conversation
+        users_label: "参与者"
+        users_placeholder: "选择用户参与此帖子"
       no_private_topics:
-        create_btn: Start your first private conversation
-        title: You have no private messages.
-      updated_notice: Title updated
-    recent_activity: Recent activity
+        create_btn: "发布你第一个私人帖子"
+        title: "你没有私人的消息。"
+      updated_notice: "标题已更新"
+    recent_activity: "最近状况"
     search:
       form:
         btn_submit: :thredded.search.form.label
-        label: Search
-        placeholder: Search Topics and Posts
-    time_ago: "%{time} ago"
+        label: "搜索"
+        placeholder: "搜索帖子和回复"
+    time_ago: "%{time} 前"
     topics:
-      delete_confirm: Are you sure you want to delete this topic? This CANNOT be undone.
-      delete_topic: Delete Topic
-      deleted_notice: Topic deleted
-      edit: Edit Topic
-      follow: Follow this topic
-      followed_by: 'Followed by:'
-      followed_by_noone: No one is following this topic
-      followed_notice: You are now following this topic
+      delete_confirm: "你确定删除该帖子吗？该动作不可逆。"
+      delete_topic: "删除帖子"
+      deleted_notice: "帖子已删除"
+      edit: "编辑帖子"
+      follow: "关注该帖子"
+      followed_by: "被他们关注："
+      followed_by_noone: "没有人关注该帖子"
+      followed_notice: "你现在正在关注该帖子"
       following:
-        auto: You are following this topic because auto-follow is enabled.
-        manual: You are following this topic.
-        mentioned: You are following this topic because you were mentioned on it.
-        posted: You are following this topic because you posted to it.
+        auto: "你已经关注该帖子由于自动关注已开启。"
+        manual: "你正在关注该帖子"
+        mentioned: "你正在关注该帖子由于你被提及到。"
+        posted: "你正在关注该帖子由于你参与了回复。"
       form:
-        categories_placeholder: Categories
+        categories_placeholder: "分类"
         content_label: :thredded.posts.form.content_label
-        create_btn: Create New Topic
-        messageboard_label: Messageboard
-        title_label: Title
+        create_btn: "创建新帖子"
+        messageboard_label: "板块"
+        title_label: "标题"
         title_placeholder: :thredded.topics.form.title_label
-        title_placeholder_start: Start a New Topic
-        update_btn: Update Topic
+        title_placeholder_start: "发布新的帖子"
+        update_btn: "更新帖子"
       locked:
-        label: Locked
-      mark_as_unread: Mark unread from here
-      not_following: You are not following this topic.
+        label: "锁定"
+      mark_as_unread: "在这里标记未读"
+      not_following: "你未关注该帖子。"
       search:
-        no_results_in_messageboard_message_html: There are no results for your search <q>%{query}</q> in %{messageboard}
-        no_results_message_html: There are no results for your search <q>%{query}</q>
-        page_title: Topics Search Results
-        results_in_messageboard_message_html: Search results for <q>%{query}</q> in %{messageboard}
-        results_message_html: Search results for <q>%{query}</q>
-        search_in_all_messageboards_btn: Search everywhere
-      started_by_html: Started %{time_ago} by %{user}
+        no_results_in_messageboard_message_html: "在%{messageboard}板块中未找到 <q>%{query}</q> 相关的搜索结果。"
+        no_results_message_html: "没有关于 <q>%{query}</q> 的搜索结果。"
+        page_title: "帖子搜索结果"
+        results_in_messageboard_message_html: "在%{messageboard}板块中关于 <q>%{query}</q> 的搜索结果。"
+        results_message_html: "关于 <q>%{query}</q> 的搜索结果。"
+        search_in_all_messageboards_btn: "搜索全站"
+      started_by_html: "发布于 %{time_ago} 由 %{user}"
       sticky:
-        label: Sticky
-      unfollow: Stop following
-      unfollowed_notice: You are no longer following this topic
-      updated_notice: Topic updated
+        label: "置顶"
+      unfollow: "取消关注"
+      unfollowed_notice: "你已不再关注该帖子"
+      updated_notice: "帖子已更新"
     users:
-      currently_online: Currently Online
-      last_active_html: Last active %{time_ago}
-      posted_in_topic_html: Posted in %{topic_link}
+      currently_online: "目前在线"
+      last_active_html: "最后活跃 %{time_ago}"
+      posted_in_topic_html: "回复在 %{topic_link}"
       posts_count:
-        one: Posted once
-        other: Posted %{count} times
+        one: "一个回复"
+        other: "%{count} 个回复"
       recent_activity: :thredded.recent_activity
-      started_topic_html: Started %{topic_link}
+      started_topic_html: "发布 %{topic_link}"
       started_topics_count:
-        one: Started one topic
-        other: Started %{count} topics
-      user_posted_in_topic_html: "%{user_link} posted in %{topic_link}"
-      user_since_html: User since %{time_ago}
-      user_started_topic_html: "%{user_link} started %{topic_link}"
+        one: "发布一个帖子"
+        other: "发布 %{count} 个帖子"
+      user_posted_in_topic_html: "%{user_link} 回复在 %{topic_link}"
+      user_since_html: "用户自 %{time_ago}"
+      user_started_topic_html: "%{user_link} 发布 %{topic_link}"
