--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -7,6 +7,7 @@ zh-CN:
     edit_my_account: 编辑账户
     forums: :thredded.nav.all_messageboards
     sign_in: :devise.shared.links.sign_in
+    sign_up: :devise.shared.links.sign_up
     sign_out: 注销
     theme: 主题
   themes:
